--- a/app/src/main/res/layout/fragment_rate_policies.xml
+++ b/app/src/main/res/layout/fragment_rate_policies.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/secondaryBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".dashboard.createRate.RatePoliciesFragment">
+    tools:context=".dashboard.configuration.createRate.RatePoliciesFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/propertyProfileLayout"
