--- a/app/src/main/res/layout/activity_second_chain_onboarding.xml
+++ b/app/src/main/res/layout/activity_second_chain_onboarding.xml
@@ -313,7 +313,7 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/registrationNumberLayout"
+                        android:id="@+id/propertyTypeLayout"
                         style="@style/ClickableTextInputLayoutStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -324,7 +324,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/TaxNameLayout">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/registrationNumberText"
+                            android:id="@+id/properytyTypeText"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:clickable="true"
@@ -344,9 +344,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:hint="Base Currency"
+                        android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="@id/TaxNameLayout"
                         app:layout_constraintStart_toStartOf="@id/TaxNameLayout"
-                        app:layout_constraintTop_toBottomOf="@+id/registrationNumberLayout">
+                        app:layout_constraintTop_toBottomOf="@+id/propertyTypeLayout">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/baseCurrencyText"
