--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -955,7 +955,7 @@
                                     android:visibility="gone"
                                     app:layout_constraintTop_toBottomOf="@id/img_rate">
                                 <LinearLayout
-                                    android:id="@+id/ll1"
+                                    android:id="@+id/roomTypeCard"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     app:layout_constraintTop_toTopOf="parent"
@@ -986,7 +986,6 @@
                                     android:background="@color/black"
                                     android:layout_marginStart="20dp"
                                     android:layout_marginTop="12dp"
-                                    app:layout_constraintTop_toBottomOf="@id/ll1"
                                     android:paddingStart="20dp"
                                     android:orientation="horizontal"
                                     android:gravity="center_vertical">
