--- a/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
@@ -294,6 +294,7 @@
                         </com.google.android.material.card.MaterialCardView>
 
                         <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/TaxNameLayout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             style="@style/TextInputLayoutStyle"
@@ -303,6 +304,7 @@
                             app:endIconTint="@color/black">
 
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/TaxNameText"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:fontFamily="@font/roboto"
@@ -313,6 +315,7 @@
                         </com.google.android.material.textfield.TextInputLayout>
 
                         <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/registrationNumberLayout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             style="@style/TextInputLayoutStyle"
@@ -322,6 +325,7 @@
                             app:endIconTint="@color/black">
 
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/registrationNumberText"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:fontFamily="@font/roboto"
