--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,12 +11,15 @@
     <color name="textColor">#171717</color>
     <color name="cardbackcolor">#10141A</color>
     <color name="subtitle">#828282</color>
-    <color name="subtitleHeading">#5E5E5E</color>
     <color name="primaryBackground">#FFFFFF</color>
     <color name="secondaryBackground">#F7F7FC</color>
     <color name="unselectedBackground">#E6ECF5</color>
     <color name="textInputStrokeColor">#E6ECF5</color>
 
+    <!--Text Colors-->
+    <color name="subtitleHeading">#5E5E5E</color>
+    <color name="item_light_heading">#4B5970</color>
+    <color name="item_text">#303844</color>
 
     <color name="textHighlighted">#272A3D</color>
 
