--- a/app/src/main/res/layout/fragment_room_type.xml
+++ b/app/src/main/res/layout/fragment_room_type.xml
@@ -1,10 +1,317 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".dashboard.configuration.roomType.RoomTypeFragment">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/secondaryBackground">
+
+        <TextView
+            android:id="@+id/aA"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Room Types"
+            android:fontFamily="@font/roboto_bold"
+            android:textColor="@color/secondary"
+            android:textSize="@dimen/H2"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/createNewBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_marginEnd="20dp"
+            android:clickable="true"
+            android:backgroundTint="@color/black"
+            app:cardCornerRadius="10dp"
+            android:focusable="true"
+            app:layout_constraintTop_toTopOf="@id/aA"
+            app:layout_constraintBottom_toBottomOf="@id/aA"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="+  Create New"
+                android:layout_gravity="center"
+                android:fontFamily="@font/roboto_bold"
+                android:textSize="@dimen/H5"
+                android:textColor="@color/white"
+                android:paddingHorizontal="16dp"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/searchCard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/CardViewTheme"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintStart_toStartOf="@id/aA"
+            app:layout_constraintTop_toBottomOf="@id/aA"
+            app:cardBackgroundColor="@color/white">
+
+            <EditText
+                android:id="@+id/search"
+                android:layout_width="@dimen/editTextWidth"
+                android:layout_height="40dp"
+                android:hint="Search"
+                android:textSize="@dimen/H4"
+                android:layout_marginStart="10dp"
+                android:drawablePadding="10dp"
+                android:drawableStart="@drawable/svg_search"
+                android:background="@null"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:id="@+id/ll5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            app:layout_constraintHorizontal_bias="0.02"
+            app:layout_constraintTop_toTopOf="@id/searchCard"
+            app:layout_constraintEnd_toStartOf="@id/llView"
+            app:layout_constraintBottom_toBottomOf="@id/searchCard"
+            app:layout_constraintStart_toEndOf="@id/searchCard">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Filter"
+                    android:textSize="@dimen/H4"
+                    android:layout_marginHorizontal="5dp"
+                    android:textColor="@color/secondary"
+                    android:fontFamily="@font/roboto"/>
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginHorizontal="2dp"
+                    android:src="@drawable/svg_filter"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginStart="10dp"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sort"
+                    android:textSize="@dimen/H4"
+                    android:layout_marginHorizontal="5dp"
+                    android:textColor="@color/secondary"
+                    android:fontFamily="@font/roboto"/>
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:scaleType="fitXY"
+                    android:layout_marginHorizontal="2dp"
+                    android:src="@drawable/svg_sort"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
 
-</FrameLayout>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/allProp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            style="@style/CardViewTheme"
+            android:layout_marginVertical="20dp"
+            android:visibility="visible"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/createNewBtn"
+            app:layout_constraintStart_toStartOf="@id/searchCard"
+            app:layout_constraintTop_toBottomOf="@id/searchCard">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:orientation="vertical">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/items_linear"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:id="@+id/shortCode"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/roboto"
+                        android:text="Short Code"
+                        android:textColor="@color/item_light_heading"
+                        android:textSize="@dimen/H6"
+                        android:singleLine="true"
+                        app:layout_constraintEnd_toStartOf="@id/propertyName"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"/>
+
+                    <TextView
+                        android:id="@+id/propertyName"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:text="Room Type"
+                        android:fontFamily="@font/roboto"
+                        android:textColor="@color/item_light_heading"
+                        android:textSize="@dimen/H6"
+                        android:singleLine="true"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/guide1"
+                        app:layout_constraintStart_toEndOf="@id/shortCode"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guide1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.28"/>
+
+                    <TextView
+                        android:id="@+id/bedType"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/roboto"
+                        android:text="Bed Type"
+                        android:textColor="@color/item_light_heading"
+                        android:textSize="@dimen/H6"
+                        android:singleLine="true"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/adultChild"
+                        app:layout_constraintStart_toEndOf="@id/guide1"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/adultChild"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Adult &amp; Child"
+                        android:fontFamily="@font/roboto"
+                        android:textColor="@color/item_light_heading"
+                        android:textSize="@dimen/H6"
+                        android:singleLine="true"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/maxOccupancy"
+                        app:layout_constraintStart_toEndOf="@id/bedType"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/maxOccupancy"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/roboto"
+                        android:text="Max Occupancy"
+                        android:textColor="@color/item_light_heading"
+                        android:textSize="@dimen/H6"
+                        android:singleLine="true"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/baseRate"
+                        app:layout_constraintStart_toEndOf="@id/adultChild"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/baseRate"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/roboto"
+                        android:text="Base Rate"
+                        android:textColor="@color/item_light_heading"
+                        android:textSize="@dimen/H6"
+                        android:singleLine="true"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/amenities"
+                        app:layout_constraintStart_toEndOf="@id/maxOccupancy"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/amenities"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/roboto"
+                        android:text="Amenities"
+                        android:textColor="@color/item_light_heading"
+                        android:textSize="@dimen/H6"
+                        android:singleLine="true"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/actions"
+                        app:layout_constraintStart_toEndOf="@id/baseRate"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/actions"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto"
+                        android:text="Actions"
+                        android:textColor="@color/item_light_heading"
+                        android:textSize="@dimen/H6"
+                        android:textAlignment="center"
+                        android:singleLine="true"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/amenities"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/roomTypeRecycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:listitem="@layout/item_room_types"/>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
