--- a/app/src/main/res/layout/fragment_view_properties.xml
+++ b/app/src/main/res/layout/fragment_view_properties.xml
@@ -21,7 +21,7 @@
             android:textColor="@color/secondary"
             android:textSize="@dimen/H2"
             android:layout_marginTop="20dp"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -202,7 +202,7 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/roboto"
                         android:text="H-Code"
-                        android:textColor="@color/subtitle"
+                        android:textColor="@color/item_light_heading"
                         android:textSize="@dimen/H6"
                         android:singleLine="true"
                         app:layout_constraintEnd_toStartOf="@id/propertyName"
@@ -217,7 +217,7 @@
                         android:layout_weight="3"
                         android:text="Property Name"
                         android:fontFamily="@font/roboto"
-                        android:textColor="@color/subtitle"
+                        android:textColor="@color/item_light_heading"
                         android:textSize="@dimen/H6"
                         android:singleLine="true"
                         android:layout_marginStart="5dp"
@@ -240,7 +240,7 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/roboto"
                         android:text="Property Type"
-                        android:textColor="@color/subtitle"
+                        android:textColor="@color/item_light_heading"
                         android:textSize="@dimen/H6"
                         android:singleLine="true"
                         android:layout_marginStart="5dp"
@@ -256,7 +256,7 @@
                         android:layout_weight="1"
                         android:text="Location"
                         android:fontFamily="@font/roboto"
-                        android:textColor="@color/subtitle"
+                        android:textColor="@color/item_light_heading"
                         android:textSize="@dimen/H6"
                         android:singleLine="true"
                         android:layout_marginStart="5dp"
@@ -272,7 +272,7 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/roboto"
                         android:text="Occupancy"
-                        android:textColor="@color/subtitle"
+                        android:textColor="@color/item_light_heading"
                         android:textSize="@dimen/H6"
                         android:singleLine="true"
                         android:layout_marginStart="5dp"
@@ -288,7 +288,7 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/roboto"
                         android:text="Total Rooms"
-                        android:textColor="@color/subtitle"
+                        android:textColor="@color/item_light_heading"
                         android:textSize="@dimen/H6"
                         android:singleLine="true"
                         android:layout_marginStart="5dp"
@@ -304,7 +304,7 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/roboto"
                         android:text="Amenities"
-                        android:textColor="@color/subtitle"
+                        android:textColor="@color/item_light_heading"
                         android:textSize="@dimen/H6"
                         android:singleLine="true"
                         android:layout_marginStart="5dp"
@@ -320,7 +320,7 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/roboto"
                         android:text="Status"
-                        android:textColor="@color/subtitle"
+                        android:textColor="@color/item_light_heading"
                         android:textSize="@dimen/H6"
                         android:singleLine="true"
                         android:layout_marginStart="5dp"
@@ -335,7 +335,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto"
                         android:text="Actions"
-                        android:textColor="@color/subtitle"
+                        android:textColor="@color/item_light_heading"
                         android:textSize="@dimen/H6"
                         android:textAlignment="center"
                         android:singleLine="true"
