--- a/app/src/main/res/layout/item_room_types.xml
+++ b/app/src/main/res/layout/item_room_types.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/items_linear"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp">
 
         <TextView
-            android:id="@+id/hCode"
+            android:id="@+id/shortCode"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:fontFamily="@font/roboto"
-            android:text="H-Code"
+            android:text="DLX"
             android:textColor="@color/item_text"
             android:textSize="@dimen/H6"
             android:singleLine="true"
@@ -33,16 +33,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:text="Property Name"
+            android:text="Room Type Name"
             android:fontFamily="@font/roboto"
             android:textColor="@color/item_text"
             android:textSize="@dimen/H6"
             android:singleLine="true"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/guide1"
-            app:layout_constraintStart_toEndOf="@id/hCode"
-            app:layout_constraintBottom_toBottomOf="@id/hCode"
-            app:layout_constraintTop_toTopOf="@id/hCode"/>
+            app:layout_constraintStart_toEndOf="@id/shortCode"
+            app:layout_constraintBottom_toBottomOf="@id/shortCode"
+            app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide1"
@@ -52,84 +52,98 @@
             app:layout_constraintGuide_percent="0.28"/>
 
         <TextView
-            android:id="@+id/propertyType"
+            android:id="@+id/bedType"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/roboto"
-            android:text="Property Type"
+            android:text="King Size"
             android:textColor="@color/item_text"
             android:textSize="@dimen/H6"
             android:singleLine="true"
             android:layout_marginStart="5dp"
-            app:layout_constraintEnd_toStartOf="@id/location"
+            app:layout_constraintEnd_toStartOf="@id/adultChild"
             app:layout_constraintStart_toEndOf="@id/guide1"
-            app:layout_constraintBottom_toBottomOf="@id/hCode"
-            app:layout_constraintTop_toTopOf="@id/hCode"/>
-
-        <TextView
-            android:id="@+id/location"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Location"
-            android:fontFamily="@font/roboto"
-            android:textColor="@color/item_text"
-            android:textSize="@dimen/H6"
-            android:singleLine="true"
-            android:layout_marginStart="5dp"
-            app:layout_constraintEnd_toStartOf="@id/occupancy"
-            app:layout_constraintStart_toEndOf="@id/propertyType"
-            app:layout_constraintBottom_toBottomOf="@id/hCode"
-            app:layout_constraintTop_toTopOf="@id/hCode"/>
-
-        <TextView
-            android:id="@+id/occupancy"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/roboto"
-            android:text="Occupancy"
-            android:textColor="@color/item_text"
-            android:textSize="@dimen/H6"
-            android:singleLine="true"
-            android:layout_marginStart="5dp"
-            app:layout_constraintEnd_toStartOf="@id/totalRooms"
-            app:layout_constraintStart_toEndOf="@id/location"
-            app:layout_constraintBottom_toBottomOf="@id/hCode"
-            app:layout_constraintTop_toTopOf="@id/hCode"/>
+            app:layout_constraintBottom_toBottomOf="@id/shortCode"
+            app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
         <LinearLayout
-            android:id="@+id/totalRooms"
+            android:id="@+id/adultChild"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginStart="5dp"
+            app:layout_constraintEnd_toStartOf="@id/maxOccupancy"
+            app:layout_constraintStart_toEndOf="@id/bedType"
+            app:layout_constraintBottom_toBottomOf="@id/shortCode"
+            app:layout_constraintTop_toTopOf="@id/shortCode">
+
+            <ImageView
+                android:layout_width="12dp"
+                android:layout_height="11dp"
+                android:layout_marginTop="1dp"
+                android:src="@drawable/svg_person_adult"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1-3"
+                android:layout_marginHorizontal="4dp"
+                android:fontFamily="@font/roboto"
+                android:textColor="@color/item_text"
+                android:textSize="@dimen/H6"
+                android:singleLine="true"/>
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="1dp"
+                android:src="@drawable/svg_child"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0-3"
+                android:layout_marginHorizontal="3dp"
+                android:fontFamily="@font/roboto"
+                android:textColor="@color/item_text"
+                android:textSize="@dimen/H6"
+                android:singleLine="true"/>
+
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/maxOccupancy"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="horizontal"
+            android:fontFamily="@font/roboto"
+            android:text="5"
+            android:textColor="@color/item_text"
+            android:textSize="@dimen/H6"
+            android:singleLine="true"
+            android:layout_marginStart="5dp"
+            app:layout_constraintEnd_toStartOf="@id/baseRate"
+            app:layout_constraintStart_toEndOf="@id/adultChild"
+            app:layout_constraintBottom_toBottomOf="@id/shortCode"
+            app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+        <TextView
+            android:id="@+id/baseRate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/roboto"
+            android:text="2,799.00"
+            android:textColor="@color/item_text"
+            android:textSize="@dimen/H6"
+            android:singleLine="true"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/amenities"
-            app:layout_constraintStart_toEndOf="@id/occupancy"
-            app:layout_constraintBottom_toBottomOf="@id/hCode"
-            app:layout_constraintTop_toTopOf="@id/hCode">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:fontFamily="@font/roboto"
-                android:text="30"
-                android:textColor="@color/item_text"
-                android:textSize="@dimen/H6" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:fontFamily="@font/roboto"
-                android:text="View"
-                android:textColor="@color/item_text"
-                android:textSize="@dimen/H6" />
-
-        </LinearLayout>
+            app:layout_constraintStart_toEndOf="@id/maxOccupancy"
+            app:layout_constraintBottom_toBottomOf="@id/shortCode"
+            app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
         <LinearLayout
             android:id="@+id/amenities"
@@ -138,15 +152,14 @@
             android:layout_weight="1"
             android:orientation="horizontal"
             android:layout_marginStart="5dp"
-            app:layout_constraintEnd_toStartOf="@id/status"
-            app:layout_constraintStart_toEndOf="@id/totalRooms"
-            app:layout_constraintBottom_toBottomOf="@id/hCode"
-            app:layout_constraintTop_toTopOf="@id/hCode">
+            app:layout_constraintEnd_toStartOf="@id/actions"
+            app:layout_constraintStart_toEndOf="@id/baseRate"
+            app:layout_constraintBottom_toBottomOf="@id/shortCode"
+            app:layout_constraintTop_toTopOf="@id/shortCode">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:fontFamily="@font/roboto"
                 android:text="30"
                 android:textColor="@color/item_text"
@@ -162,22 +175,6 @@
                 android:textSize="@dimen/H6" />
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/roboto"
-            android:text="Status"
-            android:textColor="@color/item_text"
-            android:textSize="@dimen/H6"
-            android:singleLine="true"
-            android:layout_marginStart="5dp"
-            app:layout_constraintEnd_toStartOf="@id/actions"
-            app:layout_constraintStart_toEndOf="@id/amenities"
-            app:layout_constraintBottom_toBottomOf="@id/hCode"
-            app:layout_constraintTop_toTopOf="@id/hCode"/>
 
         <LinearLayout
             android:id="@+id/actions"
@@ -189,9 +186,9 @@
             android:weightSum="3"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/status"
-            app:layout_constraintBottom_toBottomOf="@id/hCode"
-            app:layout_constraintTop_toTopOf="@id/hCode">
+            app:layout_constraintStart_toEndOf="@id/amenities"
+            app:layout_constraintBottom_toBottomOf="@id/shortCode"
+            app:layout_constraintTop_toTopOf="@id/shortCode">
 
             <ImageView
                 android:layout_width="0dp"
