onBoarding Screen Layouts issue solved.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="red">#FF0000</color>
 
     <color name="primary">#ACD037</color>
+    <color name="yellow">#FFEB3B</color>
     <color name="secondary">#272A3D</color>
     <color name="lightBlack">#717A8F</color>
     <color name="shadowColor">#7B7F80</color>
