--- a/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
@@ -179,10 +179,10 @@
                         <com.google.android.material.card.MaterialCardView
                             android:id="@+id/starCategoryLayout"
                             android:layout_width="match_parent"
-                            android:layout_height="45dp"
+                            android:layout_height="48dp"
                             android:layout_marginTop="15dp"
-                            app:strokeWidth="1dp"
-                            app:strokeColor="@color/subtitle"
+                            app:strokeWidth="0.5dp"
+                            app:strokeColor="@color/lightBlack"
                             app:cardCornerRadius="10dp"
                             app:cardBackgroundColor="@color/white"
                             app:layout_constraintStart_toStartOf="@id/roomsInPL"
@@ -200,7 +200,7 @@
                                     android:text="Star Category"
                                     android:textSize="16sp"
                                     android:layout_marginStart="20dp"
-                                    android:textColor="@color/black"
+                                    android:textColor="@color/lightBlack"
                                     android:fontFamily="@font/roboto"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintBottom_toBottomOf="parent"
@@ -212,7 +212,7 @@
                                     android:layout_height="wrap_content"
                                     android:stepSize="8"
                                     android:rating="2"
-                                    android:progressTint="@color/primary"
+                                    android:progressTint="@color/yellow"
                                     android:layout_marginEnd="10dp"
                                     style="@style/Widget.AppCompat.RatingBar.Small"
                                     app:layout_constraintTop_toTopOf="parent"
@@ -226,11 +226,11 @@
                         <com.google.android.material.card.MaterialCardView
                             android:id="@+id/roomsInPL"
                             android:layout_width="match_parent"
-                            android:layout_height="45dp"
+                            android:layout_height="48dp"
                             android:layout_marginTop="15dp"
                             app:cardCornerRadius="10dp"
-                            app:strokeWidth="1dp"
-                            app:strokeColor="@color/subtitle"
+                            app:strokeWidth="0.5dp"
+                            app:strokeColor="@color/lightBlack"
                             app:cardBackgroundColor="@color/white"
                             app:layout_constraintTop_toBottomOf="@id/pincode_layout"
                             app:layout_constraintStart_toStartOf="@id/pincode_layout"
@@ -245,7 +245,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="Rooms in Properties"
                                     android:textSize="16sp"
-                                    android:textColor="@color/black"
+                                    android:textColor="@color/lightBlack"
                                     android:fontFamily="@font/roboto"
                                     android:layout_marginStart="16dp"
                                     app:layout_constraintBottom_toBottomOf="parent"
@@ -338,11 +338,11 @@
                         <com.google.android.material.card.MaterialCardView
                             android:id="@+id/rateLayout"
                             android:layout_width="match_parent"
-                            android:layout_height="45dp"
+                            android:layout_height="48dp"
                             android:layout_marginTop="15dp"
                             app:cardCornerRadius="10dp"
-                            app:strokeWidth="1dp"
-                            app:strokeColor="@color/subtitle"
+                            app:strokeWidth="0.5dp"
+                            app:strokeColor="@color/lightBlack"
                             app:cardBackgroundColor="@color/white"
                             app:layout_constraintTop_toBottomOf="@id/roomsInPL"
                             app:layout_constraintStart_toStartOf="@id/pincode_layout"
@@ -357,7 +357,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="Rate %"
                                     android:textSize="16sp"
-                                    android:textColor="@color/black"
+                                    android:textColor="@color/lightBlack"
                                     android:fontFamily="@font/roboto"
                                     android:layout_marginStart="16dp"
                                     app:layout_constraintBottom_toBottomOf="parent"
