--- a/app/src/main/res/layout/item_stay_view.xml
+++ b/app/src/main/res/layout/item_stay_view.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
         android:id="@+id/rLayout"
@@ -30,14 +31,53 @@
 
     </RelativeLayout>
 
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:elevation="5dp"
+        app:layout_constraintEnd_toEndOf="@id/recyclerView"
+        app:layout_constraintStart_toStartOf="@id/recyclerView"
+        app:layout_constraintTop_toTopOf="@id/recyclerView"
+        app:layout_constraintBottom_toBottomOf="@id/recyclerView">
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/svg_child"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="5dp"
+            android:textColor="#CA7C22"
+            android:fontFamily="@font/roboto_medium"
+            android:text="Guest's Name"
+            android:textSize="@dimen/H5" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:elevation="8dp"
+        android:background="@color/grey20"
+        app:layout_constraintTop_toTopOf="@id/rLayout"
+        app:layout_constraintBottom_toBottomOf="@id/rLayout"
+        app:layout_constraintStart_toEndOf="@id/rLayout"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginVertical="6dp"
+        android:layout_marginHorizontal="20dp"
         android:background="@drawable/rounded_background"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_progress"
+        tools:itemCount="8"
         app:layout_constraintBottom_toBottomOf="@id/rLayout"
         app:layout_constraintStart_toEndOf="@id/rLayout"
         app:layout_constraintTop_toTopOf="@id/rLayout" />
